--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,7 +33,7 @@ const color = optionsTheme[randomIndex];
 		<ViewTransitions/>
 		<title>{title}</title>
 	</head>
-	<body id="body" class={color}>
+	<body class={color}>
 		<Navbar hamburger={hamburger}/>
 		<slot />
 		<Footer />
