--- a/src/components/BackgroundColors.astro
+++ b/src/components/BackgroundColors.astro
@@ -19,9 +19,8 @@ const { type } = Astro.props;
             height: 55px;
             width: 100%;
             min-width: 300px;
-            top: 0;
-            left: 0;
             z-index: 100;
+            inset: 0;
 
             &::after {
                 border-radius: 0;
@@ -40,18 +39,16 @@ const { type } = Astro.props;
             position: relative;
             width: 95%;
             max-width: 400px;
-            top: 0;
-            left: 0;
             z-index: 50;
+            padding: 3px;
         }
 
         &.form-signin {
             position: relative;
             width: 95%;
             max-width: 650px;
-            top: 0;
-            left: 0;
             z-index: 50;
+            padding: 3px;
         }
         &.money {
             position: relative;
@@ -127,17 +124,6 @@ const { type } = Astro.props;
                 );
                 animation: rotating 20s linear infinite;
                 filter: blur(5px);
-            }
-        }
-    }
-    @media (666px < width) {
-        .background {
-            &.form-signin {
-                height: 392.5px;
-
-                #group__lastname2{
-                    display: none;
-                }
             }
         }
     }
