--- a/src/sections/Footer.astro
+++ b/src/sections/Footer.astro
@@ -2,3 +2,55 @@
     <p>&copy; 2024 BrokerView | Todos los derechos reservados.</p>
     <span id="background_footer"></span>
 </footer>
+<style>
+    footer {
+        display: flex;
+        flex-direction: column;
+        gap: 1px;
+        height: 22.5px;
+
+        aside ~ & {
+            margin-left: var(--margin-close);
+        }
+
+        aside.expanded ~ & {
+            margin-left: var(--margin-open);
+        }
+
+        p {
+            text-align: center;
+            letter-spacing: 1px;
+            font-size: 0.7rem;
+        }
+
+        #background_footer {
+            width: 100%;
+            height: 7.5px;
+        }
+    }
+    @media screen and (width < 666px) {
+        footer {
+            aside ~ & {
+                margin-left: 0;
+            }
+        }
+    }
+    body.red {
+        #background_footer {
+            background: linear-gradient(
+                to top,
+                var(--red-light) 10%,
+                transparent
+            );
+        }
+    }
+    body.green {
+        #background_footer {
+            background: linear-gradient(
+                to top,
+                var(--green-light) 10%,
+                transparent
+            );
+        }
+    }
+</style>
