--- a/src/components/HamburgerMenu.astro
+++ b/src/components/HamburgerMenu.astro
@@ -69,10 +69,10 @@
     document.getElementById("hamburger").addEventListener("click", () => {
         if (newWidth < 666) {
             document
-                .getElementById("background__menu-mobile")
+                .getElementById("background__menu-toggle")
                 .classList.toggle("appear");
         } else {
-            document.getElementById("menu-mobile").classList.toggle("expanded");
+            document.getElementById("menu-toggle").classList.toggle("expanded");
         }
     });
 </script>
