--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Form from "@sections/Form.astro";
 import TextLink from "@sections/TextLink.astro";
 ---
 
-<Layout title="BrokerView" hamburger="not">
+<Layout title="BrokerView" isForm={true}>
 	<main>
 		<h1 class="title">Ingresar</h1>
 
