--- a/src/pages/signin.astro
+++ b/src/pages/signin.astro
@@ -4,7 +4,7 @@ import Form from "src/sections/Form.astro";
 import Layout from "@layouts/Layout.astro";
 ---
 
-<Layout title="BrokerView | Registro" hamburger="not">
+<Layout title="BrokerView | Registro" isForm={true}>
     <main>
         <h1 class="title">Registrarse</h1>
 
