--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,6 @@
 :root{
-    --bg-color-dark: #232323;
-    --bg-color-light: #efefef;
+    --bg-color-dark: #121212;
+    --bg-color-light: #dfdfdf;
     --text-color-dark: #fefefe;
     --text-color-light: #010101;
     --green-light:#29ff00;
@@ -21,7 +21,7 @@
         --a: 360deg;
     }
 }
-h1,h2,h3,h4,h5,ul,body,main,div,input,label,form,nav,header,p,button{
+h1,h2,h3,h4,h5,ul,body,main,div,input,label,form,nav,header,p,button,aside{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -34,7 +34,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    min-height: 100svh;
+    min-height: 100dvh;
     width: 100%;
     max-width: 1350px;
     min-width: 290px;
@@ -42,6 +42,10 @@ body {
     background-color: var(--bg-color-dark);
     color: var(--text-color-dark);
 
+    /* if The page isn´t in the forms */
+    &:has(#content){
+        min-height: auto;
+    }
 }
 h1 {
     font-weight: 100;
@@ -54,14 +58,6 @@ main {
     align-items: center;
     justify-content: center;
     height: auto;
-
-    aside ~ & {
-        margin-left: var(--margin-close);
-    }
-
-    .expanded ~ & {
-        margin-left: var(--margin-open);
-    }
 }
 @media screen and (width < 666px) {
     main {
