--- a/src/components/BrokerLogo.astro
+++ b/src/components/BrokerLogo.astro
@@ -18,11 +18,13 @@ import '@fontsource/audiowide';
         align-items: center;
         user-select: none;
         height: 100%;
-    }
     h3{
         font-family: 'Audiowide', system-ui;
+
+        font-weight: 100;
         color: var(--text-color-light);
     }
+}
     html.light{
         h3{
             color: var(--text-color-dark);
