--- a/src/pages/inicio.astro
+++ b/src/pages/inicio.astro
@@ -3,16 +3,14 @@ import Layout from "@layouts/Layout.astro";
 import TitlesWelcome from "@components/TitlesWelcome.astro";
 import MenuToggle from "@sections/MenuToggle.astro";
 
-import '@styles/main-content.css'
+import "@styles/main-content.css";
 ---
 
 <Layout title="BrokerView | Inicio" isForm={false}>
-    <div id="content">
-        <MenuToggle />
-        <main>
-            <TitlesWelcome />
-        </main>
-    </div>
+    <MenuToggle />
+    <main>
+        <TitlesWelcome />
+    </main>
 </Layout>
 
 <style>
